Add header elements
language selector and navbar added to page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/css/style.scss">
+    <link rel="stylesheet" href="./dist/css/styles.css">
     <title>Company Website</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="langselector">
+            <div class="container">
+                <div class="langselector__wrapper">
+                    <p class="langselector__label">
+                        Select language
+                    </p>
+                    <a href="javascript:void(0)" class="langselector__btn langselector__btn--active">
+                        en
+                    </a>
+                    <a href="javascript:void(0)" class="langselector__btn">
+                        fr
+                    </a>
+                </div>
+            </div>
+            <!-- CONATAINER END -->
+        </div>
+        <!-- LANG SELECTOR END -->
+        <nav class="navbar">
+            <div class="container">
+            <ul class="navbar__list">
+                <li class="navbar__list__item">
+                    <div class="navbar__logo">
+                        <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
+                    </div>
+                    <!-- LOGO END -->
+                </li>
+                <li class="navbar__list__item">Learn</li>
+                <li class="navbar__list__item">Connect</li>
+                <li class="navbar__list__item "> JOIN US</li>
+            </ul>
+            </div>
+        </div>
+        <!-- CONTAINER END -->
+        </nav>
+        <!-- NAVIGATION END -->
+
+    </header>
+
+    <script src="./dist/js/jquery-1.11.3.min.js"></script>
+    <script src="./dist/js/bootstrap.min.js"></script>
+    <script src="./dist/js/jquery-migrate.min.js"></script>
+    <script src="./dist/js/popper.min.js"></script>
+    <script src="./dist/js/slick.min.js"></script>
+    <script src="./dist/js/custom.js"></script>
 </body>
 </html>
