Add navigation styles
company logo and nav menu styles added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="container">
                 <div class="langselector__wrapper">
                     <p class="langselector__label">
-                        Select language
+                        Select language:
                     </p>
-                    <a href="javascript:void(0)" class="langselector__btn langselector__btn--active">
+                    <a href="javascript:void(0)" class="langselector__btn langselector__btn--border langselector__btn--active">
                         en
                     </a>
                     <a href="javascript:void(0)" class="langselector__btn">
@@ -30,16 +30,16 @@
         <!-- LANG SELECTOR END -->
         <nav class="navbar">
             <div class="container">
-            <ul class="navbar__list">
-                <li class="navbar__list__item">
+            <ul class="navbar__list w-100">
+                <li class="navbar__item pl-0">
                     <div class="navbar__logo">
                         <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
                     </div>
                     <!-- LOGO END -->
                 </li>
-                <li class="navbar__list__item">Learn</li>
-                <li class="navbar__list__item">Connect</li>
-                <li class="navbar__list__item "> JOIN US</li>
+                <li class="navbar__item">Learn</li>
+                <li class="navbar__item">Connect</li>
+                <li class="navbar__item navbar__item--register pr-0"> JOIN US</li>
             </ul>
             </div>
         </div>
