--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <p class="langselector__label">
                         Select language:
                     </p>
-                    <a href="javascript:void(0)" class="langselector__btn langselector__btn--border langselector__btn--active">
+                    <a href="javascript:void(0)"
+                        class="langselector__btn langselector__btn--border langselector__btn--active">
                         en
                     </a>
                     <a href="javascript:void(0)" class="langselector__btn">
@@ -30,24 +31,66 @@
         <!-- LANG SELECTOR END -->
         <nav class="navbar">
             <div class="container">
-            <ul class="navbar__list w-100">
-                <li class="navbar__item pl-0">
-                    <div class="navbar__logo">
-                        <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
-                    </div>
-                    <!-- LOGO END -->
-                </li>
-                <li class="navbar__item">Learn</li>
-                <li class="navbar__item">Connect</li>
-                <li class="navbar__item navbar__item--register pr-0"> JOIN US</li>
-            </ul>
+                <ul class="navbar__list w-100">
+                    <li class="navbar__item pl-0">
+                        <a href="javascript:void(0)" class="navbar__logo">
+                            <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
+                        </a>
+                        <!-- LOGO END -->
+                    </li>
+                    <li class="navbar__item">
+                        <a href="#">
+                            Learn
+                    </li>
+                    </a>
+                    <li class="navbar__item">
+                        <a href="#">Connect
+                        </a>
+                    </li>
+                    <li class="navbar__item navbar__item--register pr-0">
+                        <a href="#"></a>
+                        JOIN US
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </div>
-        <!-- CONTAINER END -->
+            <!-- CONTAINER END -->
         </nav>
         <!-- NAVIGATION END -->
 
     </header>
+
+    <section class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="hero__textcontent">
+                        <div class="hero__tabs">
+
+                        </div>
+                        <!-- TAB END -->
+                        <h1 class="title">
+                            ONE TREE
+                            INFINITE
+                            OPPORTUNITIES
+                        </h1>
+
+                        <div class="hero__desc">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="./dist/images/Image-1.png" alt="" class="img-fluid w-100">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- HERO  END -->
 
     <script src="./dist/js/jquery-1.11.3.min.js"></script>
     <script src="./dist/js/bootstrap.min.js"></script>
@@ -56,4 +99,5 @@
     <script src="./dist/js/slick.min.js"></script>
     <script src="./dist/js/custom.js"></script>
 </body>
+
 </html>
