--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                     <li class="navbar__item">
                         <a href="#">
                             Learn
+                        </a>
                     </li>
-                    </a>
                     <li class="navbar__item">
                         <a href="#">Connect
                         </a>
                     </li>
                     <li class="navbar__item navbar__item--register pr-0">
-                        <a href="#"></a>
+                        <a href="#">
                         JOIN US
                         </a>
                     </li>
@@ -86,11 +86,41 @@
                     <img src="./dist/images/Image-1.png" alt="" class="img-fluid w-100">
                 </div>
             </div>
-
         </div>
-
     </section>
     <!-- HERO  END -->
+
+    <section class="connect">
+        <div class="connect__bgimg">
+            <img src="./dist/images/connect.png" alt="" class="img-fluid">
+        </div>
+        <!-- BG IMG END -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="./dist/images/Image.png" alt="CONNECT-IMG" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <div class="text__content">
+                        <h2 class="title">
+                            A community of people lorem ipsum dolor sit amet
+                        </h2>
+
+                        <div class="text__desc">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+                        </div>
+                        <div class="link">
+                            <a href="#" class="link__button">
+                                Find members <span class="link__arrow"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="./dist/js/jquery-1.11.3.min.js"></script>
     <script src="./dist/js/bootstrap.min.js"></script>
