Add seperator styles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                     <li class="navbar__item navbar__item--register pr-0">
                         <a href="#">
-                        JOIN US
+                            JOIN US
                         </a>
                     </li>
                 </ul>
@@ -90,26 +90,28 @@
     </section>
     <!-- HERO  END -->
 
-    <section class="connect">
-        <div class="connect__bgimg">
+    <section class="connect section-padding">
+        <div class="section-bgimg section-bgimg--right">
             <img src="./dist/images/connect.png" alt="" class="img-fluid">
         </div>
         <!-- BG IMG END -->
+        <div class="connect__wrapper">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img src="./dist/images/Image.png" alt="CONNECT-IMG" class="img-fluid">
                 </div>
                 <div class="col-md-6">
-                    <div class="text__content">
+                    <div class="text-content">
                         <h2 class="title">
                             A community of people lorem ipsum dolor sit amet
                         </h2>
 
-                        <div class="text__desc">
+                        <div class="text-content__desc">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+
                         </div>
                         <div class="link">
                             <a href="#" class="link__button">
@@ -119,6 +121,14 @@
                     </div>
                 </div>
             </div>
+            <!-- PART CONTENT END -->
+
+            <div class="seperator"></div>
+            <!-- SEPERATOR END -->
+
+
+        </div>
+
         </div>
     </section>
 
