Overwrite existing bootstrap card styles
pre-exsiting bootstrap styles overwritten as needed

--- a/index.html
+++ b/index.html
@@ -96,41 +96,70 @@
         </div>
         <!-- BG IMG END -->
         <div class="connect__wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="./dist/images/Image.png" alt="CONNECT-IMG" class="img-fluid">
-                </div>
-                <div class="col-md-6">
-                    <div class="text-content">
-                        <h2 class="title">
-                            A community of people lorem ipsum dolor sit amet
-                        </h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./dist/images/Image.png" alt="CONNECT-IMG" class="img-fluid">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text-content">
+                            <h2 class="title">
+                                A community of people lorem ipsum dolor sit amet
+                            </h2>
 
-                        <div class="text-content__desc">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+                            <div class="text-content__desc">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt
+                                    ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
 
-                        </div>
-                        <div class="link">
-                            <a href="#" class="link__button">
-                                Find members <span class="link__arrow"></span>
-                            </a>
+                            </div>
+                            <div class="link">
+                                <a href="#" class="link__button">
+                                    Find members <span class="link__arrow"></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- PART CONTENT END -->
+
+                <div class="seperator"></div>
+                <!-- SEPERATOR END -->
             </div>
-            <!-- PART CONTENT END -->
+            <!-- CONTAINER END -->
 
-            <div class="seperator"></div>
-            <!-- SEPERATOR END -->
-
-
+            <div class="blockcard">
+                <div class="container">
+                    <h4 class="blockcard__title">
+                        Our Members
+                    </h4>
+                </div>
+                <!-- TITLE END -->
+                <div class="blockcard__wrapper">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                                    <p class="card-text">123 resources</p>
+                                </div>
+                                <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                                    alt="Card image cap">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--BLOCK WRAPPER END  -->
+            </div>
+            <!-- BLOCK CARD END -->
         </div>
-
-        </div>
+        <!-- CONNECT WRAPPER END -->
     </section>
+    <!-- CONNECT END -->
+
+
 
     <script src="./dist/js/jquery-1.11.3.min.js"></script>
     <script src="./dist/js/bootstrap.min.js"></script>
