Add Learn block to page
learn block elements generated along with slick slider for cards.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </h4>
                 </div>
                 <!-- TITLE END -->
-                <div class="blockcard__wrapper">
+                <div class="blockcard__wrapper blockcard--slick">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
@@ -146,8 +146,43 @@
                         <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
                             alt="Card image cap">
                     </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    
+
+                    
                 </div>
-                <!--BLOCK WRAPPER END -->
+                <!--BLOCK WRAPPER END  -->
             </div>
             <!-- BLOCK CARD END -->
         </div>
