Add learn block along with seperate card styles.

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <section class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <div class="hero__textcontent">
                         <div class="hero__tabs">
 
                         </div>
                         <!-- TAB END -->
                         <h1 class="title">
-                            ONE TREE
-                            INFINITE
+                            ONE TREE <br>
+                            INFINITE <br>
                             OPPORTUNITIES
                         </h1>
 
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <img src="./dist/images/Image-1.png" alt="" class="img-fluid w-100">
                 </div>
             </div>
@@ -90,16 +90,16 @@
     </section>
     <!-- HERO  END -->
 
-    <section class="connect section-padding">
+    <section class="content-section section-padding">
         <div class="section-bgimg section-bgimg--right">
             <img src="./dist/images/connect.png" alt="" class="img-fluid">
         </div>
         <!-- BG IMG END -->
-        <div class="connect__wrapper">
+        <div class="content-section__wrapper">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="./dist/images/Image.png" alt="CONNECT-IMG" class="img-fluid">
+                        <img src="./dist/images/Image.png" alt="connect-IMG" class="img-fluid">
                     </div>
                     <div class="col-md-6">
                         <div class="text-content">
@@ -143,52 +143,203 @@
                             <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 1.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <h5 class="card-title">Suppliers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 3.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <h5 class="card-title">brands & <br>
+                                Retailers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 2.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
+                            <h5 class="card-title">Womens’ groups</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 1.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
-
-                    
-
-                    
                 </div>
                 <!--BLOCK WRAPPER END  -->
             </div>
             <!-- BLOCK CARD END -->
         </div>
-        <!-- CONNECT WRAPPER END -->
+        <!-- content-section WRAPPER END -->
     </section>
     <!-- CONNECT END -->
+
+    <section class="content-section content-section--pnkbg section-padding">
+        <div class="section-bgimg">
+            <img src="./dist/images/Learn.png" alt="" class="img-fluid">
+        </div>
+        <!-- BG IMG END -->
+        <div class="content-section__wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="text-content">
+                            <h2 class="title">
+                                The go-to place for Shea resources lorem ipsum dolor sit amet
+                            </h2>
+
+                            <div class="text-content__desc">
+                                <p>A one sentence statement that expands on this resource. Concise and digestible.</p>
+
+                            </div>
+                            <div class="link">
+                                <a href="#" class="link__button">
+                                    Find resources <span class="link__arrow"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid">
+                    </div>
+                </div>
+
+                <!-- PART CONTENT END -->
+
+                <div class="seperator"></div>
+                <!-- SEPERATOR END -->
+            </div>
+            <!-- CONTAINER END -->
+
+            <div class="blockcard">
+                <div class="container">
+                    <h4 class="blockcard__title">
+                        Our Members
+                    </h4>
+                </div>
+                <!-- TITLE END -->
+                <div class="blockcard__wrapper blockcard--slick">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">FOOD</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_2.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Butter</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_1.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">cosmetics</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">sustainability</h5>
+                            <p class="card-text">123 resources</p>
+                        </div>
+                        <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
+                            alt="Card image cap">
+                    </div>
+                    <!-- CARD 1 -->
+                </div>
+                <!--BLOCK WRAPPER END  -->
+            </div>
+            <!-- BLOCK CARD END -->
+
+            <div class="container">
+                <div class="seperator"></div>
+            </div>
+
+            <!-- SEPERATOR END -->
+            <div class="resources">
+                <div class="container">
+                    <h4 class="blockcard__title">
+                        Featured resources
+                    </h4>
+                </div>
+                <!-- TITLE END -->
+                <div class="blogcard">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card card--bgnone">
+                                    <img class="card-img-top card-img--border" src="./dist/images/XL/Resource/Image-1.png"
+                                        alt="Card image cap">
+                                    <div class="card-body card-body--bgnone">
+                                        <p class="card-text"><span class="card-tag">INDUSTRY</span><small
+                                                class="card-update">i day ago</small></p>
+                                        <h5 class="card-text">VP Bawumia launches Parkland Restoration Fund to protect
+                                            shea parklands
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- COL 4 END -->
+                            <div class="col-md-4">
+                                <div class="card card--bgnone card--imgnone">
+                                    <div class="card-body">
+                                        <p class="card-text"><span class="card-tag">food</span><small
+                                                class="card-update">3 days ago</small></p>
+                                        <h4 class="card-text">Newly Permitted Food Ingredients Create Largest Shea
+                                            Market in the U.S. & Grow West African Exports
+                                        </h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- COL 4 END -->
+                            <div class="col-md-4">
+                                <div class="card card--bgnone">
+                                    <img class="card-img-top card-img--border" src="./dist/images/XL/Resource/Image.png"
+                                        alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="card-text"><span class="card-tag">cosmetics</span><small
+                                                class="card-update">i week ago</small></p>
+                                        <h5 class="card-text">The Estée Lauder Companies Inc. joins the Global Shea
+                                            Alliance
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- COL 4 END -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- RESOURCE END -->
+        </div>
+        <!-- content-section WRAPPER END -->
+    </section>
+    <!-- LEARN SECTION END -->
 
 
     <script src="./dist/js/jquery-1.11.3.min.js"></script>
