Update line height for titles

--- a/index.html
+++ b/index.html
@@ -319,8 +319,13 @@
                             <!-- COL 4 END -->
                             <div class="col-md-4">
                                 <div class="card card--bgnone">
+                                    <div class="card-img__wrapper">
                                     <img class="card-img-top card-img--border" src="./dist/images/XL/Resource/Image.png"
                                         alt="Card image cap">
+                                        <div class="card-img__play">
+                                            <img src="./dist/images/XL/Resource/Polygon 2.png" alt="">
+                                        </div>
+                                    </div>
                                     <div class="card-body">
                                         <p class="card-text"><span class="card-tag">cosmetics</span><small
                                                 class="card-update">i week ago</small></p>
