Add slick styles in hero text block

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                         class="langselector__btn langselector__btn--border langselector__btn--active">
                         en
                     </a>
+                    <span class="line">
+                    </span>
                     <a href="javascript:void(0)" class="langselector__btn">
                         fr
                     </a>
@@ -66,7 +68,11 @@
                 <div class="col-md-7">
                     <div class="hero__textcontent">
                         <div class="hero__tabs">
-
+                            <ul class="hero__list">
+                                <li class="hero__item pl-0 hero__item--active">  Natural</li>
+                                <li class="hero__item">Sustainable</li>
+                                <li class="hero__item">Ethical</li>
+                            </ul>
                         </div>
                         <!-- TAB END -->
                         <h1 class="title">
@@ -80,6 +86,15 @@
                                 ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                         </div>
+                        <!-- DESCRIPTION END -->
+                        <div class="dots">
+                            <ul class="dots__list">
+                                <li class="dots__item pl-0 dots__item--active"><img src="./dist/images/Ellipse_1.png" alt="dots"></li>
+                                <li class="dots__item"><img src="./dist/images/Ellipse_1.png" alt="dots"></li>
+                                <li class="dots__item"><img src="./dist/images/Ellipse_1.png" alt="dots"></li>
+                            </ul>
+                        </div>
+                        <!-- TAB END -->
                     </div>
                 </div>
                 <div class="col-md-5">
@@ -99,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="./dist/images/Image.png" alt="connect-IMG" class="img-fluid">
+                        <img src="./dist/images/sheapromotion_2.png" alt="connect-IMG" class="img-fluid">
                     </div>
                     <div class="col-md-6">
                         <div class="text-content">
