Initiate slick in card-bgnone for sp
slick slider added to card without bg for sp screen in learn block

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <div class="sp-displaynone">
         <div class="langselector">
             <div class="container">
                 <div class="langselector__wrapper">
@@ -59,7 +60,7 @@
             <!-- CONTAINER END -->
         </nav>
         <!-- NAVIGATION END -->
-
+    </div>
     </header>
 
     <section class="hero">
@@ -145,7 +146,7 @@
             </div>
             <!-- CONTAINER END -->
 
-            <div class="blockcard">
+            <div class="blockcard left-align-slick">
                 <div class="container">
                     <h4 class="blockcard__title">
                         Our Members
@@ -210,6 +211,10 @@
         <div class="content-section__wrapper">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-6 pc-displaynone">
+                        <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid">
+                    </div> 
+
                     <div class="col-md-6">
                         <div class="text-content">
                             <h2 class="title">
@@ -227,7 +232,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 sp-displaynone">
                         <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid">
                     </div>
                 </div>
@@ -305,7 +310,7 @@
                 <!-- TITLE END -->
                 <div class="blogcard">
                     <div class="container">
-                        <div class="row">
+                        <div class="row bgnone-slider">
                             <div class="col-md-4">
                                 <div class="card card--bgnone">
                                     <img class="card-img-top card-img--border" src="./dist/images/XL/Resource/Image-1.png"
@@ -351,6 +356,7 @@
                                 </div>
                             </div>
                             <!-- COL 4 END -->
+                            
                         </div>
                     </div>
                 </div>
